# nackademin-mcp-demo

./: .gitignore  README.md  pyproject.toml  requirements.txt  server.py
data/: helpdesk_hours.json  onboarding_checklists.json
data/it_docs/: password_reset_guide.md  security_basics.md  two_factor_policy.md  vpn_setup.md  wifi_troubleshooting.md
it_helpdesk_mcp/: __init__.py  data_access.py  helpdesk_server.py
