[project]
name = "nackademin-mcp-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.0.2",
    "httpx>=0.28.1",
    "markdown>=3.10.2",
    "openai>=2.29.0",
    "pygments>=2.19.2",
    "pytz>=2026.1.post1",
    "reportlab>=4.4.10",
]
